benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignums_Sub_NormalizeBitstring_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignums_Sub_NormalizeBitstring.rs
Time: 2025-09-15 18:59:32

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find function `for_all` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Sub_NormalizeBitstring_impl.rs:52:17
   |
52 |                 for_all(|j: int| 0 <= j < result@.len() as int ==> result@[j] == s@[index + j as int]),
   |                 ^^^^^^^ help: a function with a similar name exists: `forall`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:205:1
   |
   = note: similarly named function `forall` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find function `for_all` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignums_Sub_NormalizeBitstring_impl.rs:52:17
   |
52 |                 for_all(|j: int| 0 <= j < result@.len() as int ==> result@[j] == s@[index + j as int]),
   |                 ^^^^^^^ help: a function with a similar name exists: `forall`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:205:1
   |
   = note: similarly named function `forall` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
